# gallery-backend

./: .gitignore  Cargo.toml  README.md  not.txt
src/: lib.rs  main.rs
src/ai/: image_classification.rs  mod.rs
src/db/: surrealdb.rs
src/middleware/: auth.rs  mod.rs  redirect.rs  security.rs
src/model/: app.rs  mod.rs  post.rs  user.rs
src/route/: friend.rs  index.rs  mod.rs  post.rs  user.rs
src/service/: deletion_service.rs  mod.rs
src/utils/: ai.rs  db.rs  mod.rs  security.rs
