[package]
name = "gallery-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
actix-cors = "0.7.0"
surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
regex = "1.10.6"
futures = "0.3.30"
dotenv = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0.122"
image = "0.25.2"
tract-onnx = "0.21.6"

[profile.dev.package.surrealdb]
opt-level = 3

[profile.release]
opt-level = 3